tests/invalid/spurious_mode_error.err_exp
spurious_mode_error.m:079: In clause for predicate `foldit'/4:
spurious_mode_error.m:079:   error: undefined predicate `foobie'/3.
